# mcu-interface

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  example.py  full_reflash.py  query_bootloader_fields.py  reflash_bootloader.py  samba_bootloader.py
mcu_interface/: __init__.py  bossa.py  common.py  dfu.py
