[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mcu_interface"
author = "Jacob Alexander"
author-email = "haata@kiibohd.com"
home-page = "http://kiibohd.com"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
description-file = "README.md"
requires = [
    "pyudev>=0.22.0",
#    "hidiocore>=0.1.0b3",
]
requires-python = ">=3.7"

